chore(index.html): Added html layout for homepage

--- a/index.html
+++ b/index.html
@@ -26,9 +26,86 @@
     <div class="sub-header">
         <video src="./media/hero-video.mp4" muted loop autoplay>
         </video>
+        <h1>DiscoverNYC</h1>
     </div>
-
+    <div class="container-teaser">
+        <p class="pre-headline">Places to visit</p>
+        <h2>Not sure where to go first? Here are some suggestions.</h2>
+    </div>
+    <div class="container-article-teaser">
+        <div>
+            <p class="pre-headline">Where to eat</p>
+            <h2>The best food in Manhatten</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                sed diam nonumy eirmod tempor invidunt ut labore et 
+                dolore magna aliquyam erat, sed diam voluptua. At vero 
+                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd 
+                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
+                nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam 
+                erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et 
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus 
+                est Lorem ipsum dolor sit amet.
+            </p>
+            <a class="button">Read more</a>
+        </div>
+        <div>
+            <img src="./media/nyc-food-teaser.jpg">
+        </div>
+    </div>
+    <div class="container-mobility">
+        <div>
+            <p class="pre-headline">Get around the city</p>
+            <h2>So many ways to get around the city but which one should you use?</h2>
+            <div class="container-subway-info">
+                <img class="icon-box" src="./media/subway-icon.svg">
+                <h3>Subway</h3>
+                <p>
+                    The subway is a great way to get around 
+                    NYC as its pretty fast as well as 
+                    relatively cheap compared to taking a cab everywhere.
+                </p>
+            </div>
+            <div class="container-bike-info">
+                <img class="icon-box" src="./media/bike-icon.svg">
+                <h3>Bike</h3>
+                <p>
+                    Using a bike to make your way through New York 
+                    is really enjoyable. Unlike using the subway, 
+                    you get to see a lot of the city while going to your destination.
+                </p>
+            </div>
+            <div class="container-cab-info">
+                <img class="icon-box" src="./media/cab-icon.svg">
+                <h3>Cab</h3>
+                <p>
+                    While taking a cab can be pretty expensive and 
+                    not necessarily the fastest depending on traffic its 
+                    definitely the most comfortable way to get 
+                    around and see a lot of the city.
+                </p>
+            </div>
+        </div>
+        <div>
+            <img src="./media/getaround.jpg">
+        </div>
+    </div>
  </main>
+ <footer>
+     <div class="container-contact-us">
+         <p class="contact-us-slogan">Any questions left unanswered or topics you want us to discuss?</p>
+         <a class="button">Let us know</a>
+     </div>
+     <div>
+         <p>DiscoverNYC</p>
+         <div class="social-media-icons">
+             <img src="./media/facebook-icon.svg">
+             <img src="./media/twitter-icon.svg">
+             <img src="./media/instagram-icon.svg">
+         </div>
+     </div>
+ </footer>
 <script src="./index.js"></script>
 </body>
 </html>
