chore(index.html): changed slogan text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
  </main>
  <footer>
      <div class="container-contact-us">
-         <p class="contact-us-slogan">Any questions left unanswered or topics you want us to discuss?</p>
+         <p class="contact-us-slogan">Did we leave any questions unanswered or are there any topics we didn’t discuss?</p>
          <a class="button">Let us know</a>
      </div>
      <div>
