--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
  <header>
-     <div class="header-logo">
-         <img src="./media/discover-nyc-logo.svg">
-     </div>
-     <nav>
+    <div class="logo">
+        <p class="logo-header">DiscoverNYC</p>
+    </div>
+    <nav>
         <ul>
             <li><a>Home</a></li>
             <li><a>Explore</a></li>
@@ -20,7 +20,7 @@
             <li><a>About</a></li>
             <li><a>Contact</a></li>
         </ul>
-     </nav>
+    </nav>
  </header>
  <main>
     <div class="sub-header">
