--- a/index.html
+++ b/index.html
@@ -1,111 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./main.css">
-    <title>DiscoverNYC</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./main.css">
+  <title>DiscoverNYC</title>
 </head>
+
 <body>
- <header>
+  <header>
     <div class="logo">
-        <p class="logo-header">DiscoverNYC</p>
+      <p class="logo-header">DiscoverNYC</p>
     </div>
     <nav>
-        <ul>
-            <li><a>Home</a></li>
-            <li><a>Explore</a></li>
-            <li><a>Discover</a></li>
-            <li><a>About</a></li>
-            <li><a>Contact</a></li>
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <div class="menu-btn__burger"></div>
+        <ul class="dropdown-menu">
+          <li><a>Home</a></li>
+          <li><a>Explore</a></li>
+          <li><a>Discover</a></li>
+          <li><a>About</a></li>
+          <li><a>Contact</a></li>
         </ul>
+      </div>
     </nav>
- </header>
- <main>
+  </header>
+  <main>
     <div class="sub-header">
-        <video src="./media/hero-video.mp4" muted loop autoplay>
-        </video>
-        <h1>DiscoverNYC</h1>
+      <video src="./media/hero-video.mp4" muted loop autoplay>
+      </video>
+      <h1 class="site-title">DiscoverNYC</h1>
     </div>
     <div class="container-teaser">
-        <p class="pre-headline">Places to visit</p>
-        <h2>Not sure where to go first? Here are some suggestions.</h2>
+      <p class="pre-headline">Places to visit</p>
+      <h2>Not sure where to go first? Here are some suggestions.</h2>
     </div>
     <div class="container-article-teaser">
-        <div>
-            <p class="pre-headline">Where to eat</p>
-            <h2>The best food in Manhatten</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-                sed diam nonumy eirmod tempor invidunt ut labore et 
-                dolore magna aliquyam erat, sed diam voluptua. At vero 
-                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd 
-                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
-                nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam 
-                erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et 
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus 
-                est Lorem ipsum dolor sit amet.
-            </p>
-            <a class="button">Read more</a>
-        </div>
-        <div>
-            <img src="./media/nyc-food-teaser.jpg">
-        </div>
+      <div>
+        <p class="pre-headline">Where to eat</p>
+        <h2>The best food in Manhatten</h2>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+          sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero
+          eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+          gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+          ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
+          est Lorem ipsum dolor sit amet.
+        </p>
+        <a class="button">Read more</a>
+      </div>
+      <div>
+        <img src="./media/nyc-food-teaser.jpg">
+      </div>
     </div>
     <div class="container-mobility">
-        <div>
-            <p class="pre-headline">Get around the city</p>
-            <h2>So many ways to get around the city but which one should you use?</h2>
-            <div class="container-subway-info">
-                <img class="icon-box" src="./media/subway-icon.svg">
-                <h3>Subway</h3>
-                <p>
-                    The subway is a great way to get around 
-                    NYC as its pretty fast as well as 
-                    relatively cheap compared to taking a cab everywhere.
-                </p>
+      <div>
+        <p class="pre-headline">Get around the city</p>
+        <h2>So many ways to get around the city but which one should you use?</h2>
+        <div class="container-subway-info">
+          <div class="icon-headline-wrapper">
+            <div class="icon-box">
+              <img class="icon-subway" src="./media/subway-icon.svg">
             </div>
-            <div class="container-bike-info">
-                <img class="icon-box" src="./media/bike-icon.svg">
-                <h3>Bike</h3>
-                <p>
-                    Using a bike to make your way through New York 
-                    is really enjoyable. Unlike using the subway, 
-                    you get to see a lot of the city while going to your destination.
-                </p>
-            </div>
-            <div class="container-cab-info">
-                <img class="icon-box" src="./media/cab-icon.svg">
-                <h3>Cab</h3>
-                <p>
-                    While taking a cab can be pretty expensive and 
-                    not necessarily the fastest depending on traffic its 
-                    definitely the most comfortable way to get 
-                    around and see a lot of the city.
-                </p>
-            </div>
+            <h3 class="subline">Subway</h3>
+          </div>
+          <p>
+            The subway is a great way to get around
+            NYC as its pretty fast as well as
+            relatively cheap compared to taking a cab everywhere.
+          </p>
         </div>
-        <div>
-            <img src="./media/getaround.jpg">
+        <div class="container-bike-info">
+          <div class="icon-headline-wrapper">
+            <div class="icon-box">
+              <img class="icon-bike" src="./media/bike-icon.svg">
+            </div>
+            <h3 class="subline">Bike</h3>
+          </div>
+          <p>
+            Using a bike to make your way through New York
+            is really enjoyable. Unlike using the subway,
+            you get to see a lot of the city while going to your destination.
+          </p>
         </div>
+        <div class="container-cab-info">
+          <div class="icon-headline-wrapper">
+            <div class="icon-box">
+              <img class="icon-cab" src="./media/cab-icon.svg">
+            </div>
+            <h3 class="subline">Cab</h3>
+          </div>
+          <p>
+            While taking a cab can be pretty expensive and
+            not necessarily the fastest depending on traffic its
+            definitely the most comfortable way to get
+            around and see a lot of the city.
+          </p>
+        </div>
+      </div>
+      <div>
+        <img class="get-around-img" src="./media/getaround.jpg">
+      </div>
     </div>
- </main>
- <footer>
-     <div class="container-contact-us">
-         <p class="contact-us-slogan">Did we leave any questions unanswered or are there any topics we didn’t discuss?</p>
-         <a class="button">Let us know</a>
-     </div>
-     <div>
-         <p>DiscoverNYC</p>
-         <div class="social-media-icons">
-             <img src="./media/facebook-icon.svg">
-             <img src="./media/twitter-icon.svg">
-             <img src="./media/instagram-icon.svg">
-         </div>
-     </div>
- </footer>
-<script src="./index.js"></script>
+  </main>
+  <footer>
+    <div class="container-contact-us">
+      <p class="contact-us-slogan">Did we leave any questions unanswered or are there any topics we didn’t discuss?</p>
+      <a class="button">Let us know</a>
+    </div>
+    <div class="footer-bar">
+      <p class="logo-footer">DiscoverNYC</p>
+      <div class="container-social-media-icons">
+        <img class="social-media-icons" src="./media/facebook-icon.svg">
+        <img class="social-media-icons" src="./media/twitter-icon.svg">
+        <img src="./media/instagram-icon.svg">
+      </div>
+    </div>
+  </footer>
+  <script src="./index.js"></script>
 </body>
+
 </html>
