Added slick stylesheet & script; added html teaser

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./main.css">
+  <link rel="stylesheet" type="text/css" href="./node_modules/slick-carousel/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="./node_modules/slick-carousel/slick/slick-theme.css"/>
   <title>DiscoverNYC</title>
 </head>
 
@@ -37,6 +39,26 @@
     <div class="container-teaser">
       <p class="pre-headline">Places to visit</p>
       <h2>Not sure where to go first? Here are some suggestions.</h2>
+      <div class="teaser-slider">
+        <div class="teaser">
+          <img class="img-brooklyn" src="./media/slide-img-brooklyn.jpg">
+          <h3 class="teaser-headline">Brooklyn</h3>
+          <p class="teaser-text">A must visit for your stay</p>
+          <p><a class="teaser-link">Explore</a></p>
+        </div>
+        <div class="teaser">
+          <img class="img-edge" src="./media/slider-img-edge.jpg">
+          <h3 class="teaser-headline">The Edge</h3>
+          <p class="teaser-text">A must visit for your stay</p>
+          <p><a class="teaser-link">Explore</a></p>
+        </div>
+        <div class="teaser">
+          <img class="img-central-park" src="./media/slider-img-central-park.jpg">
+          <h3 class="teaser-headline">Central Park</h3>
+          <p class="teaser-text">A must visit for your stay</p>
+          <p><a class="teaser-link">Explore</a></p>
+        </div>
+      </div>
     </div>
     <div class="container-article-teaser">
       <div>
@@ -124,6 +146,7 @@
       </div>
     </div>
   </footer>
+  <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
   <script src="./index.js"></script>
 </body>
 
