--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="sub-header">
       <video src="./media/hero-video.mp4" muted loop autoplay>
       </video>
-      <h1 class="site-title">DiscoverNYC</h1>
+      <h1 class="site-title">Discover<span id="text-replace">NYC</span></h1>
     </div>
     <div class="container-teaser">
       <p class="pre-headline">Places to visit</p>
@@ -82,7 +82,7 @@
           ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
           est Lorem ipsum dolor sit amet.
         </p>
-        <a class="button">Read more</a>
+        <a class="button" href="/#">Read more</a>
       </div>
       <div>
         <img src="./media/nyc-food-teaser.jpg">
@@ -141,7 +141,7 @@
   <footer>
     <div class="container-contact-us">
       <p class="contact-us-slogan">Did we leave any questions unanswered or are there any topics we didn’t discuss?</p>
-      <a class="button">Let us know</a>
+      <a class="button" href="/#">Let us know</a>
     </div>
     <div class="footer-bar">
       <p class="logo-footer">DiscoverNYC</p>
