--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header>
+  <header id="header">
     <div class="logo">
       <p class="logo-header">DiscoverNYC</p>
     </div>
