--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <input type="checkbox" />
         <div class="menu-btn__burger"></div>
         <ul class="dropdown-menu">
-          <li><a>Home</a></li>
-          <li><a>Explore</a></li>
-          <li><a>Discover</a></li>
-          <li><a>About</a></li>
-          <li><a>Contact</a></li>
+          <li><a href="/#">Home</a></li>
+          <li><a href="/#">Explore</a></li>
+          <li><a href="/#">Discover</a></li>
+          <li><a href="/#">About</a></li>
+          <li><a href="/#">Contact</a></li>
         </ul>
       </div>
     </nav>
