chore(index.html): added teaser element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav>
       <div id="menuToggle">
-        <input type="checkbox" />
+        <input type="checkbox"/>
         <div class="menu-btn__burger"></div>
         <ul class="dropdown-menu">
           <li><a href="/#">Home</a></li>
@@ -64,10 +64,18 @@
             <p><a class="teaser-link">Explore</a></p>
           </div>
         </div>
+        <div class="teaser">
+          <img class="img-zoo" src="./media/bronx-zoo-teaser.jpg">
+          <div class="teaser-text-wrapper">
+            <h3 class="teaser-headline">Bronx Zoo</h3>
+            <p class="teaser-text">A must visit for your stay</p>
+            <p><a class="teaser-link">Explore</a></p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container-article-teaser">
-      <div>
+      <div class="content-column">
         <p class="pre-headline">Where to eat</p>
         <h2>The best food in Manhatten</h2>
         <p class="text">
@@ -84,12 +92,12 @@
         </p>
         <a class="button" href="/#">Read more</a>
       </div>
-      <div>
+      <div class="content-column">
         <img src="./media/nyc-food-teaser.jpg">
       </div>
     </div>
     <div class="container-mobility">
-      <div>
+      <div class="content-column">
         <p class="pre-headline">Get around the city</p>
         <h2>So many ways to get around the city but which one should you use?</h2>
         <div class="container-subway-info">
@@ -133,7 +141,7 @@
           </p>
         </div>
       </div>
-      <div>
+      <div class="content-column">
         <img class="get-around-img" src="./media/getaround.jpg">
       </div>
     </div>
