--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <input type="checkbox"/>
           <div class="menu-btn__burger"></div>
           <ul class="dropdown-menu">
-            <li><a href="/#">Home</a></li>
-            <li><a href="/#">Explore</a></li>
-            <li><a href="/#">Discover</a></li>
-            <li><a href="/#">About</a></li>
-            <li><a class="no-padding-right" href="/#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="/pages/brooklyn.html">Explore</a></li>
+            <li><a href="/pages/brooklyn.html">Discover</a></li>
+            <li><a href="/pages/brooklyn.html">About</a></li>
+            <li><a class="no-padding-right" href="/pages/brooklyn.html">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -80,18 +80,17 @@
       <div class="max-width-article">
         <div class="content-column">
           <p class="pre-headline">Where to eat</p>
-          <h2>The best food in Manhatten</h2>
+          <h2>Street food in NYC</h2>
           <p class="text">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-            sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero
-            eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-            gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-            ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
-            est Lorem ipsum dolor sit amet.
+            We cover the exciting street food, dining and 
+            unique Food Truck catering scene in New York City. 
+            We deliver hot news, reviews, tips, and clips for 
+            anyone who is hungry. Get in touch with us and 
+            experience the delicious street food of carts 
+            and trucks anywhere in New York City. So if you 
+            are interested in street food and everything there 
+            is to know about in and around the city you 
+            should come check out articles.
           </p>
           <a class="button" href="/#">Read more</a>
         </div>
@@ -166,10 +165,11 @@
       </div>
     </div>
   </footer>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
-  <script src="./index.js"></script>
+<script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
+<script src="./slider.js"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
