--- a/pages/brooklyn.html
+++ b/pages/brooklyn.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="max-width-header">
         <div class="logo">
-            <p class="logo-header">DiscoverNYC</p>
+            <p class="logo-header"><a href="../index.html">DiscoverNYC</a></p>
         </div>
         <nav>
             <div id="menuToggle">
@@ -19,7 +19,7 @@
             <div class="menu-btn__burger"></div>
             <ul class="dropdown-menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./brooklyn.html">Explore</a></li>
+                <li class="active"><a href="./brooklyn.html">Explore</a></li>
                 <li><a href="./brooklyn.html">Discover</a></li>
                 <li><a href="./brooklyn.html">About</a></li>
                 <li><a class="no-padding-right" href="./brooklyn.html">Contact</a></li>
@@ -121,7 +121,7 @@
         </div>
         <div class="footer-background-color">
           <div class="footer-bar">
-            <p class="logo-footer">DiscoverNYC</p>
+            <p class="logo-footer"><a href="../index.html">DiscoverNYC</a></p>
             <div class="container-social-media-icons">
               <img class="social-media-icons" src="../media/facebook-icon.svg">
               <img class="social-media-icons" src="../media/twitter-icon.svg">
