--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./node_modules/slick-carousel/slick/slick.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./node_modules/slick-carousel/slick/slick-theme.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./node_modules/slick-carousel/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./node_modules/slick-carousel/slick/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <title>DiscoverNYC</title>
   </head>
@@ -33,11 +25,7 @@
               <li><a href="/pages/brooklyn.html">Explore</a></li>
               <li><a href="/pages/brooklyn.html">Discover</a></li>
               <li><a href="/pages/brooklyn.html">About</a></li>
-              <li>
-                <a class="no-padding-right" href="/pages/brooklyn.html"
-                  >Contact</a
-                >
-              </li>
+              <li><a class="no-padding-right" href="/pages/brooklyn.html">Contact</a></li>
             </ul>
           </div>
         </nav>
@@ -172,9 +160,9 @@
         <div class="footer-bar">
           <p class="logo-footer"><a href="./index.html">DiscoverNYC</a></p>
           <div class="container-social-media-icons">
-            <img class="social-media-icons" src="./media/facebook-icon.svg" />
-            <img class="social-media-icons" src="./media/twitter-icon.svg" />
-            <img src="./media/instagram-icon.svg" />
+            <img class="social-media-icons" href="facebook.com" target="_blank" src="./media/facebook-icon.svg" />
+            <img class="social-media-icons" href="twitter.com" target="_blank" src="./media/twitter-icon.svg" />
+            <img href="instagram.com" target="_blank" src="./media/instagram-icon.svg" />
           </div>
         </div>
       </div>
